k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: blog
  name: blog-pod
spec:
  containers:
  - name: git-sync
    image: k8s.gcr.io/git-sync:v2.0.4
    imagePullPolicy: Always
    volumeMounts:
    - name: markdown
      mountPath: /git
  - name: hugo
    image: ottogiron/hugo
    imagePullPolicy: Always
    securityContext:
      runAsUser: 0
    volumeMounts:
    - name: markdown
      mountPath: /src
    - name: html
      mountPath: /dest
  - name: nginx
    image: nginx
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
    ports:
    - containerPort: 80
  volumes:
  - name: markdown
    emptyDir: {}
  - name: html
    emptyDir: {}
