k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  type: "NodePort"
  ports:
  - port: 80
  selector:
    name: blog
